kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal-notes
  labels:
    name: personal-notes
    app: personal-notes-system
